--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
+        
+      - name: install
+        run: npm install
+        
+      - run: npm run build
+      
 
       # Runs a set of commands using the runners shell
       - name: Deploy 🚀
