--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development postcss styles.css -o ./dist/tailwind.css -w"
+    "dev": "NODE_ENV=development postcss styles.css -o ./dist/tailwind.css -w",
     "build": "NODE_ENV=production postcss styles.css -o ./dist/tailwind.css"
   },
   "author": "",
