--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development postcss styles.css -o ./dist/tailwind.css -w",
-    "build": "NODE_ENV=production postcss styles.css -o ./dist/tailwind.css"
+    "build": "NODE_ENV=production postcss styles.css -o ./dist/tailwind.css && cp index.html dist/ && cp stopwatch.js dist/ && cp download.png dist/"
   },
   "author": "",
   "license": "ISC"
